# flask-attachments

./: .flake8  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  None  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  tests.yml
docs/: conf.py  modules.rst  usage.rst
requirements/: base.in  base.txt  dev.in  dev.txt  docs.in  docs.txt  minimums.in  minimums.txt  tests.txt  typing.txt
src/flask_attachments/: __init__.py  cli.py  extension.py  models.py  views.py
tests/: conftest.py  test_cli.py  test_extension.py  test_model.py  test_views.py
