[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "flask-attachments"
dynamic = ["version", "dependencies"]
description = "Flask Attachments provides a way to integrate arbitrary media with SQLAlchemy in a Flask website."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">= 3.10"
authors = [{ name = "Alex Rudy", email = "opensource@alexrudy.net" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/alexrudy/flask_attachments"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements/base.in"]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/flask_attachments/_version.py"

[tool.hatch.build.targets.wheel]
packages = [" src/flask_attachments"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.black]
line-length = 120
